apps/bank-of-anthos/resources/boa-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    owner: "pipeline"
    istio.io/rev: "asm-181-5"
  name: boa
